# NotesApp

./: .gitignore  CMakeLists.txt  README.md
include/:  ImageContent.h   NoteFactory.h  AudioContent.h  MediaContent.h  Note.h  NotesApp.h  NotesManager.h  TextContent.h  VideoContent.h
src/:  ImageContent.cpp  AudioContent.cpp  Note.cpp  NoteFactory.cpp  NotesApp.cpp  NotesManager.cpp  TextContent.cpp  VideoContent.cpp  main.cpp
